# UserManagerQtNodeOfflineCache

./: .gitignore  README.md
node-server/: index.js  package.json  run_install.sh
qt-client/: CMakeLists.txt  dbuser.cpp  dbuser.h  dbusermodel.cpp  dbusermodel.h  localdb.cpp  localdb.h  main.cpp  main.qml  websocketclient.cpp  websocketclient.h
